# device_curses

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  config.py  device.py  docker-compose.yml  f3termCurses.py  helpers.py  pyproject.toml  requirements.txt  requirements_build.txt  run-lint.sh
resources/screens/: README.md
resources/sounds/: README.md
resources/text/: README.md
resources/wordsets/: README.md
templates/: system_config.yml.template
tests/: conftest.py  test_cheats.py
